# SuperSMM

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  README-tf-deep-omr.md  README.md  SuperSMMC_cleanup.code-workspace  pyproject.toml  remove_git_files.sh  remove_github_files.sh  requirements-tf-deep-omr.txt  setup.cfg  test_omr_pipeline.py
_reorg/: architecture_diagram.md  dependency_analysis.md  dependency_cleanup_plan.md  test_logger.py
_reorg/SuperSMM/: CHANGELOG.md  README.md  package-lock.json  requirements.txt
_reorg/SuperSMM/.dev/: pytest.ini  requirements.txt
_reorg/SuperSMM/_reorg/: organize_logs.sh
_reorg/SuperSMM/config/: config.yml  performance_config.yaml
_reorg/SuperSMM/docs_src/: docusaurus.config.ts  sidebars.ts
_reorg/SuperSMM/scripts/: continue_training.sh  fix_csv.py  launch_app.sh  process_pdf.py  process_sheet.sh  simulate_training_continuation.sh  test_training_continuation.py
_reorg/SuperSMM/src/: logging_config.py  main.py
_reorg/SuperSMM/tests/: conftest.py  requirements-test.txt  test_omr_pipeline.py  test_simple.py
archive/new/performance/: performance_monitor.py
archive/preprocessing/: __init__.py  demo_preprocessor.py  multi_page_demo.py  specific_pdf_demo.py
archive/preprocessing/normalization/: image_normalizer.py
archive/preprocessing/utils/: __init__.py  logging.py
archive/recognition/: batch_recognize_ctc.py  recognize_symbols_and_update_json.py
archive/recognition/config/: __init__.py
archive/recognition/pipeline/: __init__.py  pipeline_orchestrator.py
archive/segmentation/: extract_and_save_symbols.py  symbol_segmenter.py
dashboard/: LogProxy.js  package.json  react_dashboard.out  start_dashboard.sh  sync_logs.sh
dashboard/.pids/: dashboard.pids
dashboard/public/: index.html  manifest.json
docs_src/: package-lock.json  package.json
docs_src/.docusaurus/: client-manifest.json  docusaurus.config.mjs  registry.js  site-metadata.json
docs_src/docs/development/: linting_fixes.md  refactoring_tasks.md  scripts.md
docs_src/docs/development_guides/: logging_standard.md  system_features.md
docs_src/docs/project-management-planning/: performance-requirements.md  reorg-optimization-plan.md
docs_src/docs/proposals-ideas/: cascade-web-interface-proposal.md
docs_src/docs/protocols/: agentic-automation-protocol.md
docs_src/docs/technical-deep-dives-research/: omr-research.md
docs_src/src/pages/: index.tsx
requirements/: dev.txt  prod.txt
scripts/: run_omr.py  run_training.sh
src/: setup.py
src/core/export/: music_exporter.py
src/core/models/: ml_symbol_model.py
src/core/pdf/: base_converter.py
src/core/processing/: pipeline_manager.py
src/core/processors/: image_preprocessor.py  image_processor.py
src/supersmm/: __init__.py  __main__.py
src/supersmm/cli/: main.py
src/supersmm/config/: __init__.py  config_manager.py  settings.py
src/supersmm/core/: __init__.py  exceptions.py  pipeline.py  symbols.py
src/supersmm/utils/: csv_logger.py  debug_symbols.py  decorators.py  error_handler.py  logger.py  logging_config.py  performance_monitor.py
src/tf-deep-omr/: CHANGES_LOG.md  TRAINING.md  TROUBLESHOOTING.md  train_with_logging.py
src/tf-deep-omr/scripts/: check_structure.sh  clean_sample_data.sh  continue_camera_primus_training.sh  continue_primus_training.sh  create_corpus_set.py  process_example.sh  process_rainbow_with_cli.sh  run_batch_test.sh  run_ctc_training.sh  run_fix_sample_data.sh  run_training.sh  setup.py  test_batch_training.sh  train_camera_primus.sh  train_in_batches.sh  train_optimized.sh
src/tf-deep-omr/src/: batch_predict.py  batch_test_model.py  batch_training.py  ctc_model.py  ctc_predict.py  ctc_training.py  ctc_utils.py  fix_duplicated_paths.py  fix_sample_data.py  fix_training_system.py  omr_cli.py  plot_training_stats.py  prepare_corpus.py  primus.py  setup.py  (+3 more)
(+217 files in other folders)
