[metadata]
name = supersmm
version = 0.1.0
description = SuperSMM - Advanced Sheet Music Recognition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/supersmm
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Multimedia :: Graphics

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    opencv-python>=4.5.0
    tensorflow>=2.8.0
    PyMuPDF>=1.18.0
    matplotlib>=3.4.0
    PyYAML>=5.4.0
    Pillow>=8.3.0
    psutil>=5.8.0

[options.packages.find]
where = src
exclude = 
    tests*
    docs*
    examples*
    scripts*
    notebooks*

[options.extras_require]
dev =
    pytest>=6.2.0
    pytest-cov>=2.12.0
    black>=21.5b2
    isort>=5.0.0
    flake8>=3.8.0
    mypy>=0.800
    pre-commit>=2.13.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.2

gui =
    PyQt5>=5.15.0
    seaborn>=0.11.0

[options.entry_points]
console_scripts =
    supersmm = supersmm.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
